--- a/portfolio.html
+++ b/portfolio.html
@@ -73,36 +73,36 @@
       <div class="row">
         <div class="bx bx-1">
           <div class="card"> <img class="card-img" src="assets/img/IMG_0303.JPG" alt="">
-            <div class="card-img-overlay"> <a href="sessaoemestudio.html"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Fotografia ao ar livre<br>Clica no coração acima para ver mais</h5>
+                <h5 class="card-title"></h5>
               </div>
             </div>
           </div>
         </div>
         <div class="bx bx-2">
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img2.png" alt="">
-            <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Fotográfia no estúdio<br>Clica no coração acima para ver mais</h5>
+                <h5 class="card-title"></h5>
               </div>
             </div>
           </div>
         </div>
         <div class="bx bx-3">
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img3.png" alt="">
-            <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Fotografia de Gestante<br>Clica no coração acima para ver mais</h5>
+                <h5 class="card-title"></h5>
               </div>
             </div>
           </div>
         </div>
         <div class="bx bx-4">
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img4.png" alt="">
-            <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-		      <h5 class="card-title">Fotografia de aniversário<br>Clica no coração acima para ver mais</h5>
+		      <h5 class="card-title"></h5>
               </div>
             </div>
           </div>
@@ -110,9 +110,9 @@
 	    
          <div class="bx bx-6">
             <div class="card"> <img class="card-img" src="assets/img/portfolio-img6.png" alt="">
-              <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                 <div class="bottom-text">
-                  <h5 class="card-title">Recém Nascido</h5>
+                  <h5 class="card-title"></h5>
                 </div>
               </div>
             </div>
@@ -120,18 +120,18 @@
           <div>
             <div class="bx bx-7">
               <div class="card"> <img class="card-img" src="assets/img/portfolio-img7.png" alt="">
-                <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">Retratos</h5>
+                    <h5 class="card-title"></h5>
                   </div>
                 </div>
               </div>
             </div>
             <div class="bx bx-8">
               <div class="card"> <img class="card-img" src="assets/img/DSC_0497.jpg" alt="">
-                <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">Fotografia de casamento</h5>
+                    <h5 class="card-title"></h5>
                   </div>
                 </div>
               </div>
