--- a/atividades.html
+++ b/atividades.html
@@ -132,6 +132,10 @@
               </div>
             </div>
           </div>
+	</div>
+        </div>
+        </div>
+        </div>
   
   <footer class="container-fluid p-0 pr-0">
     <div class="row mr-0 ml-0">
