--- a/redessociais.html
+++ b/redessociais.html
@@ -61,7 +61,7 @@
           <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
-          <li class="nav-item"> <a class="nav-link" href="orçamento.html" tabindex="-1" aria-disabled="true">Blog</a></li>
+          <li class="nav-item"> <a class="nav-link" href="orçamento.html" tabindex="-1" aria-disabled="true">orçamento</a></li>
           <li class="nav-item active"> <a class="nav-link" href="redessociais.html" tabindex="-1" aria-disabled="true">redes sociais</a></li>
         </ul>
       </div>
