--- a/serviços.html
+++ b/serviços.html
@@ -61,7 +61,7 @@
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="orçamento.html" tabindex="-1" aria-disabled="true">Orçamento</a></li>
-          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
+          <li class="nav-item"> <a class="nav-link" href="redessociais.html" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
         </ul>
       </div>
     </div>
