--- a/sobrenos.html
+++ b/sobrenos.html
@@ -58,11 +58,11 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
           <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
-          <li class="nav-item"> <a class="nav-link" href="atividades.html" tabindex="-1" aria-disabled="true">Actividades</a></li>
+          <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
-          <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Orçamento</a></li>
-          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
+          <li class="nav-item"> <a class="nav-link" href="orçamento.html" tabindex="-1" aria-disabled="true">Orçamento</a></li>
+          <li class="nav-item"> <a class="nav-link" href="redessociais.html" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
         </ul>
       </div>
     </div>
