--- a/orçamento.html
+++ b/orçamento.html
@@ -71,7 +71,7 @@
     <div class="card"> <img class="card-img" src="assets/img/dreamer1.png" alt="">
       <div class="card-img-overlay">
         <div class="center-text">
-          <h2 class="card-title">Vamos mantê-lo sempre informado</h2>
+          <h2 class="card-title"></h2>
           <a href="#hey" class="btn">
             <svg width="201" height="51" viewBox="0 0 201 51">
               <defs>
@@ -102,16 +102,16 @@
       <div class="blog-content-inner">
         <div class="container-fluid">
 		<a name="hey">
-          <h2 class="card-title">Nossas últimas notícias do blog</h2>
+          <h2 class="card-title">Preços</h2>
 		  </a>
 		  <div class="row single-blog">
             <div class="col-xl-4 col-lg-12 single-blog__img">
               <img class="card-img w-100" src="assets/img/el.jpg" alt="">
             </div>
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Lorem ipsum dolor sit amet</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis. Nullam nulla nisi, malesuada vitae accumsan ac, blandit eu dui. Pellentesque ut ligula ex. Donec lacinia eros et arcu rhoncus, sit amet vestibulum justo efficitur. Nulla facilisi. Integer a sem aliquet, dapibus ipsum eu, vehicula dui. Fusce id leo tellus. Ut eu accumsan arcu. Aliquam at vestibulum felis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis.</p>
+              <h2>Fotografia sozinho custa kwz 1.000.000 (Um Milhão)</h2>
+	      <p>Se reclamar, sobre para kwz 2.000.000 (Dois Milhões)</p>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis.</p>
             </div>
           <div class="row single-blog">
             <div class="col-xl-4 col-lg-12 single-blog__img">
