--- a/testemunhos.html
+++ b/testemunhos.html
@@ -71,7 +71,7 @@
     <div class="container-fluid fh5co-about-me" id="testimonial">
     <div id="my-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="card"> <img class="card-img d-block w-100" src="assets/img/about-me-img.jpg" alt="">
+        <div class="card"> <img class="card-img d-block w-100" src="assets/img/dmbw.png" alt="">
           <div class="card-img-overlay">
             <h2>Testemunhos</h2>
           </div>
