--- a/serviços.html
+++ b/serviços.html
@@ -76,7 +76,7 @@
             <div class="card"> <img class="card-img" src="assets/img/j&c1.JPG" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Fotografia ao livre</h5>
+                  <h5 class="card-title">Fotografia ao ar livre</h5>
                   <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0700" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0700.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Fotografia de Gestante</h5>
