--- a/testemunhos.html
+++ b/testemunhos.html
@@ -78,13 +78,15 @@
         </div>
         <div class="carousel-item">
           <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
-            <p>Foi incrível ter trabalhado com a DreamerPhotography, ajudaram-me a  descobrir o melhor que havia em mim, também mostraram-me o meu potencial como modelo. Gratidão! </p>
+            <p>Boa tarde, deixo essa mensagem só para prestigiar o vosso trabalho sou muito vosso fã. É um grande prazer apreciar as vossas fotografias. </p>
           </div>
         </div>
         <div class="carousel-item active">
           <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
-            <p>Foi incrível ter trabalhado com a DreamerPhotography, ajudaram-me a  descobrir o melhor que havia em mim, também mostraram-me o meu potencial como modelo. Gratidão! </p>
-         </div>
+		  <audio controls autoplay>
+                     <source src="wpp.mp3" type="audio/mpeg">
+                 </audio>
+          </div>
         </div>
         <div class="carousel-item">
           <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
