--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
       <h2>Portfolios</h2>
       <div class="row">
         <div class="bx bx-1">
-          <div class="card"> <img class="card-img" src="assets/img/IMG_0303.JPG" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/lucrecia.JPG" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
                 <h5 class="card-title"></h5>
