--- a/serviços.html
+++ b/serviços.html
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/TITAS.JPG"  alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0757.JPG"  alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Fotografia no estúdio</h5>
