--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="bx bx-2">
-          <div class="card"> <img class="card-img" src="assets/img/portfolio-img2.png" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/j&c1.JPG" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
                 <h5 class="card-title"></h5>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="bx bx-3">
-          <div class="card"> <img class="card-img" src="assets/img/portfolio-img3.png" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/j&c2.JPG" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
                 <h5 class="card-title"></h5>
