--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="bx bx-3">
-          <div class="card"> <img class="card-img" src="assets/img/j&c2.JPG" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/DSC_0028.jpg" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
                 <h5 class="card-title"></h5>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="bx bx-4">
-          <div class="card"> <img class="card-img" src="assets/img/portfolio-img4.png" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/bruna1.JPG" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
 		      <h5 class="card-title"></h5>
@@ -107,35 +107,6 @@
             </div>
           </div>
         </div>
-	    
-         <div class="bx bx-6">
-            <div class="card"> <img class="card-img" src="assets/img/portfolio-img6.png" alt="">
-              <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
-                <div class="bottom-text">
-                  <h5 class="card-title"></h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="bx bx-7">
-              <div class="card"> <img class="card-img" src="assets/img/portfolio-img7.png" alt="">
-                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
-                  <div class="bottom-text">
-                    <h5 class="card-title"></h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="bx bx-8">
-              <div class="card"> <img class="card-img" src="assets/img/DSC_0497.jpg" alt="">
-                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
-                  <div class="bottom-text">
-                    <h5 class="card-title"></h5>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
