--- a/serviços.html
+++ b/serviços.html
@@ -103,7 +103,7 @@
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/bruna1.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_1114.JPG" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Fotografia de aniversário</h5>
