--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="bx bx-2">
-          <div class="card"> <img class="card-img" src="assets/img/j&c1.JPG" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/DSC_0032.jpg" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
                 <h5 class="card-title"></h5>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="bx bx-4">
-          <div class="card"> <img class="card-img" src="assets/img/bruna1.JPG" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/bruna1.jpg" alt="">
             <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
 		      <h5 class="card-title"></h5>
