--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
   
   <div class="container-fluid recent fh5co-portfolio" id="portfolio">
     <div class="container">
-      <h2>Portfolios</h2>
+      <h2>Portfólio</h2>
       <div class="row">
         <div class="bx bx-1">
           <div class="card"> <img class="card-img" src="assets/img/lucrecia.JPG" alt="">
