--- a/serviços.html
+++ b/serviços.html
@@ -73,7 +73,7 @@
         <h2></h2>
         <div class="owl-carousel owl-carousel3 owl-theme">
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/j&c1.JPG" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0032.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Fotografia ao ar livre</h5>
@@ -103,7 +103,7 @@
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_1114.JPG" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_1114.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Fotografia de aniversário</h5>
