--- a/serviços.html
+++ b/serviços.html
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0656.JPG" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0656.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Fotografia de Gestante</h5>
