--- a/portfolio.html
+++ b/portfolio.html
@@ -107,6 +107,42 @@
             </div>
           </div>
         </div>
+	      <div class="bx bx-4">
+          <div class="card"> <img class="card-img" src="assets/img/DSC_0361.jpg" alt="">
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="bottom-text">
+		      <h5 class="card-title"></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+	      <div class="bx bx-4">
+          <div class="card"> <img class="card-img" src="assets/img/DSC_0338.jpg" alt="">
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="bottom-text">
+		      <h5 class="card-title"></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+	      <div class="bx bx-4">
+          <div class="card"> <img class="card-img" src="assets/img/DSC_0276.jpg" alt="">
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="bottom-text">
+		      <h5 class="card-title"></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+	      <div class="bx bx-4">
+          <div class="card"> <img class="card-img" src="assets/img/DSC_0122.jpg" alt="">
+            <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="bottom-text">
+		      <h5 class="card-title"></h5>
+              </div>
+            </div>
+          </div>
+        </div>
           </div>
         </div>
       </div>
