--- a/serviços.html
+++ b/serviços.html
@@ -70,7 +70,7 @@
   <div class="container-fluid fh5co-recent-work activity">
     <div class="container recent">
       <div class="row">
-        <h2>Deslize ou clique duas vezes em um cartão para ver mais fotos.</h2>
+        <h2>Deslize ou clique duas vezes em<br>um cartão para ver mais fotos.</h2>
         <div class="owl-carousel owl-carousel3 owl-theme">
           <div>
             <div class="card"> <img class="card-img" src="assets/img/DSC_0032.jpg" alt="">
