--- a/serviços.html
+++ b/serviços.html
@@ -122,6 +122,15 @@
               </div>
             </div>
           </div>
+		<div class="card"> <img class="card-img" src="assets/img/DSC_1615.JPG" alt="">
+              <div class="card-img-overlay">
+                <div class="bottom-text">
+                  <h5 class="card-title">Fotografia de casamento</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
+                </div>
+              </div>
+            </div>
+          </div>
 	</div>
         </div>
         </div>
