--- a/sobrenos.html
+++ b/sobrenos.html
@@ -124,31 +124,11 @@ Aguardamos o seu contacto!</p>
           <h2>Trabalhos recentes</h2>
           <div class="owl-carousel owl-carousel2 owl-theme">
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/modelo1.jpg" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0311.jpg" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">@Amélia de sousa</h5>
-                    <p class="card-text">Dreamer Photography</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="card"> <img class="card-img" src="assets/img/IMG_2411.jpg" alt="">
-                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
-                  <div class="bottom-text">
-                    <h5 class="card-title">Sessão da Titãs</h5>
-                    <p class="card-text"> Dreamer Photography</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <di
-              <div class="card"> <img class="card-img" src="assets/img/DSC_0755.JPG" alt="">
-                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
-                  <div class="bottom-text">
-                    <h5 class="card-title">Sessão da Titãs</h5>
-                    <p class="card-text">Dreamer Photography </p>
+                    <h5 class="card-title"></h5>
+                    <p class="card-text">@Dreamer_Photography</p>
                   </div>
                 </div>
               </div>
@@ -157,18 +137,28 @@ Aguardamos o seu contacto!</p>
               <div class="card"> <img class="card-img" src="assets/img/DSC_0757.JPG" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">Sessão da Titãs</h5>
-                    <p class="card-text">Dreamer Photographys</p>
+                    <h5 class="card-title"></h5>
+                    <p class="card-text">@Dreamer_Photography</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <di
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0191" alt="">
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title"></h5>
+                    <p class="card-text">@Dreamer_Photography </p>
                   </div>
                 </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/TITAS.JPG" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0282.jpg" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">Sessão da Titãs</h5>
-                    <p class="card-text">Dreamer Photography </p>
+                    <h5 class="card-title"></h5>
+                    <p class="card-text">@Dreamer_Photographys</p>
                   </div>
                 </div>
               </div>
@@ -177,8 +167,6 @@ Aguardamos o seu contacto!</p>
         </div>
       </div>
     </div>
-  </div>
-  
   
    <footer class="container-fluid p-0 pr-0">
     
