--- a/sobrenos.html
+++ b/sobrenos.html
@@ -128,7 +128,7 @@ Aguardamos o seu contacto!</p>
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
-                    <p class="card-text">@Dreamer_Photography</p>
+                    <p class="card-text"></p>
                   </div>
                 </div>
               </div>
@@ -138,7 +138,7 @@ Aguardamos o seu contacto!</p>
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
-                    <p class="card-text">@Dreamer_Photography</p>
+                    <p class="card-text"></p>
                   </div>
                 </div>
               </div>
@@ -148,7 +148,7 @@ Aguardamos o seu contacto!</p>
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
-                    <p class="card-text">@Dreamer_Photography </p>
+                    <p class="card-text"></p>
                   </div>
                 </div>
               </div>
@@ -158,7 +158,7 @@ Aguardamos o seu contacto!</p>
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
-                    <p class="card-text">@Dreamer_Photographys</p>
+                    <p class="card-text"></p>
                   </div>
                 </div>
               </div>
