--- a/sobrenos.html
+++ b/sobrenos.html
@@ -167,6 +167,7 @@ Aguardamos o seu contacto!</p>
         </div>
       </div>
     </div>
+</div>
   
    <footer class="container-fluid p-0 pr-0">
     
