--- a/sobrenos.html
+++ b/sobrenos.html
@@ -144,7 +144,7 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
             <di
-              <div class="card"> <img class="card-img" src="assets/img/DSC_0191" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0191.jpg" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
