--- a/sobrenos.html
+++ b/sobrenos.html
@@ -134,7 +134,7 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/TITAS.JPG" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0282" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
@@ -143,7 +143,6 @@ Aguardamos o seu contacto!</p>
                 </div>
               </div>
             </div>
-            <di
               <div class="card"> <img class="card-img" src="assets/img/DSC_0191.jpg" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
@@ -153,8 +152,7 @@ Aguardamos o seu contacto!</p>
                 </div>
               </div>
             </div>
-            <div>
-              <div class="card"> <img class="card-img" src="assets/img/DSC_0282.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0755.JPG" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
@@ -167,7 +165,6 @@ Aguardamos o seu contacto!</p>
         </div>
       </div>
     </div>
-</div>
   
    <footer class="container-fluid p-0 pr-0">
     
