--- a/sobrenos.html
+++ b/sobrenos.html
@@ -143,6 +143,7 @@ Aguardamos o seu contacto!</p>
                 </div>
               </div>
             </div>
+             <div>
               <div class="card"> <img class="card-img" src="assets/img/DSC_0191.jpg" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
@@ -152,7 +153,8 @@ Aguardamos o seu contacto!</p>
                 </div>
               </div>
             </div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0755.JPG" alt="">
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0755.JPG" alt="">
                 <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title"></h5>
@@ -165,7 +167,6 @@ Aguardamos o seu contacto!</p>
         </div>
       </div>
     </div>
-</div>
   
    <footer class="container-fluid p-0 pr-0">
     
